[gd_scene load_steps=16 format=2]

[ext_resource path="res://fonts/import/Roboto/Roboto-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://screens/generic_screen.tscn" type="PackedScene" id=2]
[ext_resource path="res://icons/cancel_white_48dp.svg" type="Texture" id=3]
[ext_resource path="res://scripts/nodes/ScenePopButton.gd" type="Script" id=4]
[ext_resource path="res://icons/check_circle_white_48dp.svg" type="Texture" id=5]
[ext_resource path="res://scripts/nodes/SceneLoadButton.gd" type="Script" id=6]
[ext_resource path="res://scripts/nodes/ResizableLabel.gd" type="Script" id=7]
[ext_resource path="res://scripts/nodes/CalendarPopup/CalendarPopup.tscn" type="PackedScene" id=8]
[ext_resource path="res://scripts/nodes/NumericLineEdit.gd" type="Script" id=9]
[ext_resource path="res://screens/transaction_screen/transaction_screen.gd" type="Script" id=11]

[sub_resource type="DynamicFont" id=1]
resource_local_to_scene = true
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
resource_local_to_scene = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
resource_local_to_scene = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
resource_local_to_scene = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
resource_local_to_scene = true
font_data = ExtResource( 1 )

[node name="Control" instance=ExtResource( 2 )]
script = ExtResource( 11 )

[node name="Header" parent="VBoxContainer" index="0"]
margin_right = 446.0
margin_bottom = 68.0

[node name="Panel" parent="VBoxContainer/Header" index="0"]
margin_right = 439.0
margin_bottom = 61.0

[node name="HBoxContainer" parent="VBoxContainer/Header" index="1"]
margin_right = 439.0
margin_bottom = 61.0

[node name="ScenePopButtons" type="Button" parent="VBoxContainer/Header/HBoxContainer" index="0"]
margin_right = 60.0
margin_bottom = 54.0
icon = ExtResource( 3 )
icon_align = 1
script = ExtResource( 4 )

[node name="HeaderLabel" parent="VBoxContainer/Header/HBoxContainer" index="1"]
margin_left = 64.0
margin_right = 368.0
margin_bottom = 54.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "New Transaction"

[node name="ConfirmButton" type="Button" parent="VBoxContainer/Header/HBoxContainer" index="2"]
margin_left = 372.0
margin_right = 432.0
margin_bottom = 54.0
icon = ExtResource( 5 )
icon_align = 1
script = ExtResource( 6 )
screen_path = "res://screens/account_screen/account_screen.tscn"

[node name="Body" parent="VBoxContainer" index="1"]
margin_top = 68.0
margin_right = 446.0
margin_bottom = 792.0

[node name="Panel" parent="VBoxContainer/Body" index="0"]
margin_right = 439.0
margin_bottom = 717.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Body" index="1"]
margin_left = 7.0
margin_top = 7.0
margin_right = 439.0
margin_bottom = 717.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Body/VBoxContainer" index="0"]
margin_right = 432.0
margin_bottom = 710.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer/Body/VBoxContainer/VBoxContainer" index="0"]
margin_right = 432.0
margin_bottom = 54.0

[node name="ResizableLabel" type="Label" parent="VBoxContainer/Body/VBoxContainer/VBoxContainer/HBoxContainer4" index="0"]
margin_right = 214.0
margin_bottom = 54.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Date:"
valign = 1
script = ExtResource( 7 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Body/VBoxContainer/VBoxContainer/HBoxContainer4" index="1"]
margin_left = 218.0
margin_right = 432.0
margin_bottom = 54.0
size_flags_horizontal = 3

[node name="CalendarButton" parent="VBoxContainer/Body/VBoxContainer/VBoxContainer/HBoxContainer4/HBoxContainer" index="0" instance=ExtResource( 8 )]
unique_name_in_owner = true
margin_right = 60.0
margin_bottom = 54.0

[node name="DateLabel" type="Label" parent="VBoxContainer/Body/VBoxContainer/VBoxContainer/HBoxContainer4/HBoxContainer" index="1"]
unique_name_in_owner = true
margin_left = 64.0
margin_top = 17.0
margin_right = 144.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 3 )
text = "2023-03-14"
script = ExtResource( 7 )

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/Body/VBoxContainer/VBoxContainer" index="1"]
margin_top = 58.0
margin_right = 432.0
margin_bottom = 83.0

[node name="ResizableLabel" type="Label" parent="VBoxContainer/Body/VBoxContainer/VBoxContainer/HBoxContainer2" index="0"]
margin_right = 39.0
margin_bottom = 25.0
size_flags_horizontal = 2
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
text = "Type:"
valign = 1
script = ExtResource( 7 )

[node name="TransactionOptionButton" type="OptionButton" parent="VBoxContainer/Body/VBoxContainer/VBoxContainer/HBoxContainer2" index="1"]
unique_name_in_owner = true
margin_left = 218.0
margin_right = 432.0
margin_bottom = 25.0
size_flags_horizontal = 3
align = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/Body/VBoxContainer/VBoxContainer" index="2"]
margin_top = 87.0
margin_right = 432.0
margin_bottom = 116.0

[node name="ResizableLabel" type="Label" parent="VBoxContainer/Body/VBoxContainer/VBoxContainer/HBoxContainer3" index="0"]
margin_right = 40.0
margin_bottom = 29.0
size_flags_horizontal = 2
size_flags_vertical = 3
custom_fonts/font = SubResource( 5 )
text = "Value"
valign = 1
script = ExtResource( 7 )

[node name="NumericLineEdit" type="LineEdit" parent="VBoxContainer/Body/VBoxContainer/VBoxContainer/HBoxContainer3" index="1"]
unique_name_in_owner = true
margin_left = 218.0
margin_right = 432.0
margin_bottom = 29.0
size_flags_horizontal = 3
text = "0"
align = 1
script = ExtResource( 9 )

[connection signal="pressed" from="VBoxContainer/Header/HBoxContainer/ConfirmButton" to="." method="_on_ConfirmButton_pressed"]
[connection signal="date_selected" from="VBoxContainer/Body/VBoxContainer/VBoxContainer/HBoxContainer4/HBoxContainer/CalendarButton" to="." method="_on_CalendarButton_date_selected"]
[connection signal="item_selected" from="VBoxContainer/Body/VBoxContainer/VBoxContainer/HBoxContainer2/TransactionOptionButton" to="." method="_on_TransactionOptionButton_item_selected"]
